--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/react": "^3.6.2",
+    "@types/react": "^18.3.9",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.15.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-snowfall": "^2.1.1",
     "tailwind": "^4.0.0",
     "typescript": "^5.6.2"
   }
